Closed Bug 936864 Opened 12 years ago Closed 12 years ago

Gaia keyboard doesn't trigger async animation

Categories

(Core :: Graphics: Layers, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28
blocking-b2g koi+
Tracking Status
firefox26 - fixed
firefox27 - fixed
firefox28 - fixed
b2g-v1.2 --- fixed

People

(Reporter: BenWa, Assigned: BenWa)

References

Details

Attachments

(1 file)

STR: 1) Click on 'I'm thinking off...' field on the b2g homescreen 2) Hide the keyboard Notice the animation is very janky. This animation looks to be properly designed to hit async animations and the keyboard is layerized during the animation as well. CSS property: http://mxr.mozilla.org/gaia/source/apps/system/style/system/keyboard.css#25
Any ideas dzbarsky why async animations aren't hit here?
Flags: needinfo?(dzbarsky)
I don't have a working B2G build at the moment. Does enabling animation logging show anything interesting in logcat?
Flags: needinfo?(dzbarsky)
Blocks: 932764
No, nsLayoutUtils::IsAnimationLoggingEnabled isn't even checked.
Flags: needinfo?(dzbarsky)
Thanks dzbarsky. I found the problem. Looks like it was a regression from bug 929362 after all.
Depends on: 929362
Flags: needinfo?(dzbarsky)
Assignee: nobody → bgirard
Status: NEW → ASSIGNED
Attachment #831772 - Flags: review?(roc)
Ugh.
Comment on attachment 831772 [details] [diff] [review] patch - logic error Ohh you're still up :). Feel free to steal the review. This is quite trivial really.
Attachment #831772 - Flags: review?(mstange)
blocking-b2g: --- → koi?
Attachment #831772 - Flags: review?(roc)
Attachment #831772 - Flags: review?(mstange)
Attachment #831772 - Flags: review+
Blocks: 937630
blocking-b2g: koi? → koi+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
https://hg.mozilla.org/releases/mozilla-b2g26_v1_2/rev/8151f46ae991 Is this B2G-only? If so, I assume we don't care about uplifting this to Aurora/Beta and the status for those release can be wontfix.
Flags: needinfo?(bgirard)
(In reply to Ryan VanderMeulen [:RyanVM UTC-5] from comment #10) > https://hg.mozilla.org/releases/mozilla-b2g26_v1_2/rev/8151f46ae991 > > Is this B2G-only? If so, I assume we don't care about uplifting this to > Aurora/Beta and the status for those release can be wontfix. IMO I would rather see this make it to aurora as well just to keep things simple. This is something users can turn on for testing.
Flags: needinfo?(bgirard)
I assume "this" is OMTA? In that case, please request approval. Also note that b2g26 != beta, so Firefox 26 is still affected.
Comment on attachment 831772 [details] [diff] [review] patch - logic error [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 929362 User impact if declined: none, unless users have preference flipped for testing. Testing completed (on m-c, etc.): on m-c. Simple logic change fix up Risk to taking this patch (and alternatives if risky): none, this is preffed off String or IDL/UUID changes made by this patch:none bug 929362 uplifted a regression and I'd like to uplift the fix everywhere the regression went in. This is used by OMTAnimation which is only enabled by default on b2g and I'd like to avoid dealing with a matrix of trees where this is or isn't fixed.
Attachment #831772 - Flags: approval-mozilla-beta?
Attachment #831772 - Flags: approval-mozilla-aurora?
This isn't user impacting enough for tracking and it's preffed off, but we'll take the low risk patches for uplift.
Attachment #831772 - Flags: approval-mozilla-beta?
Attachment #831772 - Flags: approval-mozilla-beta+
Attachment #831772 - Flags: approval-mozilla-aurora?
Attachment #831772 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: