Bug 936864 - Fix logic error in async animation code. r=roc