layout/style/nsTransitionManager.cpp
@@ -180,7 +180,7 @@ ElementTransitions::CanPerformOnCompositorThread(CanAnimateFlags aFlags) const
     if (!css::CommonElementAnimationData::CanAnimatePropertyOnCompositor(mElement,
                                                                          pt.mProperty,
                                                                          aFlags) ||
-        !css::CommonElementAnimationData::IsCompositorAnimationDisabledForFrame(frame)) {
+        css::CommonElementAnimationData::IsCompositorAnimationDisabledForFrame(frame)) {
       return false;
     }
     if (pt.mProperty == eCSSProperty_opacity) {
